# Tracker-Optimization

./: .gitignore  README.md  docker-compose.yml
C_Container/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  app-eigen.Dockerfile  app-mkl.Dockerfile  app-std.Dockerfile  base-eigen.Dockerfile  base-mkl.Dockerfile  base-std.Dockerfile  build.sh  configure.ps1  configure.sh  devbase-eigen.Dockerfile  devbase-mkl.Dockerfile  devbase-std.Dockerfile  docker-compose.yml  matrix_optimization_next_steps.txt  matrix_optimization_next_steps_inc_2.txt  run.sh
C_Container/config/: gate_sizing.xml  gating_association.xml  performance.xml  persistence.xml  runtime_profiles.xml  sensors.xml  store.xml  system.xml  tracker_model.xml
C_Container/config/entities/: ownship_static.xml
C_Container/config/scenarios/: scenario_default.xml
C_Container/config/targets/: targets_gen_1m_ca9.xml
C_Container/data/: tracks.db-shm  tracks.db-wal
C_Container/include/: la.h  la_batch_rw.h  track_batch.h  track_status.h  tracker.h  tracker_assoc.h  tracker_cfg.h  tracker_idx.h  tracker_la.h  tracker_sen.h  tracker_sim.h  tracker_trk.h  tracker_types.h  tracker_version.h.in
C_Container/include/common/: track_batch.h  track_state.h
C_Container/include/common/coordinate_utilities/: coordinate_batches.h  coordinate_transform.h
C_Container/include/config/: config_loader.h  config_types.h  path_utils.h  xml_utils.h
C_Container/include/index/: index_update_manager.h  rtree_sqlite.h  scan_volume.h  spatial_index_3d.h  spatial_index_factory.h  sqlite_rtree_backend.h  uniform_grid_index.h
C_Container/include/la/: la_batch_rw.h
C_Container/include/motion/: model_buckets.hpp  motion_models.hpp  scenario_loop.hpp  track_batch_soa.hpp
C_Container/include/plugin_framework/: plugin_interfaces.h  plugin_registry.h
C_Container/include/plugins/database/: ISpatialIndex.h  course_gates.h  index_update_manager.h  rtree_sqlite.h  scan_volume.h  spatial_index_3d.h  sqlite_rtree_backend.h  track_database.h  uniform_grid_index.h
C_Container/include/plugins/gating/: aer_sigma_gate.h
C_Container/include/plugins/measurement/: IMeasurementModel.h  aer_prediction.h
C_Container/include/plugins/propagator/: IPropagator.h  la.h
C_Container/include/plugins/simulation/: target_truth.h  targets_generator.h
C_Container/include/plugins/track_mgmt/: seed_from_truth.h  seed_tracks_from_truth.h  seed_tracks_from_xml.h  track_batch.h  track_kinematics_batch.hpp  track_meta.h  track_status.h
C_Container/include/sim/: target_truth.h
C_Container/include/targets/: targets_generator.h
C_Container/include/tracker_api/: demo_pipeline.h  tracker_engine.h
C_Container/include/trk/: seed_tracks_from_truth.h  track_batch.h
C_Container/logs/: performance.csv
C_Container/logs/archive/20260101/: performance_20260101_182952.csv  performance_20260101_190130.csv  performance_20260101_190229.csv
C_Container/logs/archive/20260102/: performance_20260102_013055.csv  performance_20260102_014841.csv  performance_20260102_015747.csv  performance_20260102_020525.csv  performance_20260102_021100.csv  performance_20260102_023835.csv  performance_20260102_031307.csv  performance_20260102_031910.csv  performance_20260102_032810.csv  performance_20260102_035917.csv  performance_20260102_035929.csv  performance_20260102_042458.csv  performance_20260102_043426.csv  performance_20260102_044230.csv  performance_20260102_175258.csv  performance_20260102_175456.csv  performance_20260102_180246.csv  performance_20260102_180820.csv
C_Container/run_scripts/: run_gate_sizing.sh
C_Container/schemas/: README_XSD_PACK.txt  common_types.xsd  gate_sizing.xsd  gating_association.xsd  ownship.xsd  performance.xsd  persistence.xsd  runtime_profiles.xsd  scenario.xsd  sensors.xsd  store.xsd  system.xsd  targets_gen.xsd  tracker_model.xsd
C_Container/src/: bench_micro.cpp  config_check.cpp  gate_sizing_tool.cpp  la_batch_rw_eigen.cpp  la_batch_rw_mkl.cpp  la_batch_rw_std.cpp  la_eigen.cpp  la_mkl.cpp  la_std.cpp  main.cpp
C_Container/src/config/: config_loader.cpp  path_utils.cpp  xml_utils.cpp  xml_utils.h
C_Container/src/demo/: demo_pipeline.cpp
C_Container/src/index/: index_update_manager.cpp  rtree_sqlite.cpp  scan_volume.cpp  spatial_index_factory.cpp  sqlite_rtree_backend.cpp  uniform_grid_index.cpp
C_Container/src/la/: la_eigen.cpp  la_std.cpp
C_Container/src/pipeline/: demo_pipeline.cpp
C_Container/src/plugins/database/: course_gates.cpp  index_update_manager.cpp  rtree_sqlite.cpp  scan_volume.cpp  sqlite_rtree_backend.cpp  track_database.cpp  uniform_grid_index.cpp
C_Container/src/plugins/propagator/coord/: coordinate_transform.cpp
C_Container/src/plugins/propagator/la/: la_batch_rw_std.cpp
C_Container/src/plugins/simulation/: targets_generator.cpp
C_Container/src/plugins/track_mgmt/trk/: seed_tracks_from_xml.cpp
C_Container/src/sim/: targets_generator.cpp
C_Container/src/targets/: targets_generator.cpp
C_Container/src/tracker_api/: tracker_engine.cpp
C_Container/src/trk/: seed_tracks_from_xml.cpp
docs/: la_overview.txt  la_performance_runs_v2.xlsx  matrix_optimization_tracker_architecture_summary.docx  plot_performance_comparison_data.m  ~$trix_optimization_tracker_architecture_summary.docx
docs/tracker_startup_xml_pack/: README.txt  gating_association.xml  persistence.xml  profiles.xml  recorder_playback.xml  sensors.xml  system.xml  telemetry_logging.xml  tracker.xml
docs/tracker_startup_xsd_pack/: README.txt  common_types.xsd  gating_association.xsd  persistence.xsd  profiles.xsd  recorder_playback.xsd  sensors.xsd  system.xsd  telemetry_logging.xsd  tracker.xsd  tracker_config_master.xsd
